# Fractal

./: CMakeLists.txt
include/: config.hpp  fractal.hpp  fractal_drawer.hpp  function.hpp  input.hpp  mandel.hpp  math_tools.hpp  newton.hpp  threadpool.hpp
src/: CMakeLists.txt  fractal_drawer.cpp  function.cpp  input.cpp  main.cpp  mandel.cpp  math_tools.cpp  newton.cpp  poly_test.cpp
